# gaming-dashboard

./: .gitignore  package.json
backend/: requirements.txt  save.py
backend/app/: pyproject.toml
backend/app/src/app/: main.py  tracker.py
backend/app/src/app/db/: dash.db  dash.sqbpro  sqlite.py
backend/db/: dash.db  data.csv  sqlite.py  targets.csv
backend/test/: get_all_processes.py
backend/tracker/: Process.py  get_all_processes.py  isRunning.py  main.py  test.py
backend/tracker/assets/: game-list.json
backend/tracker/data/: targets.json  temp_data.json
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/lib/: supabase.ts
