[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Paul Wipper",email = "wipper@hm.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "psutil (>=7.1.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
